--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,4 +22,11 @@
         <servlet-name>Jersey Web Application</servlet-name>
         <url-pattern>/shareit/*</url-pattern>
     </servlet-mapping>
+    
+    <listener>
+        <listener-class>
+            edu.hm.ShareitServletContextListener
+        </listener-class>
+    </listener>
+    
 </web-app>
