--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,7 +25,7 @@
     
     <listener>
         <listener-class>
-            edu.hm.ShareitServletContextListener
+           edu.hm.shareit.resource.ShareitServletContextListener
         </listener-class>
     </listener>
     
