basic functionality of hibernate and DI for persistence

--- a/pom.xml
+++ b/pom.xml
@@ -132,5 +132,15 @@
          </executions>
       </plugin>
     </plugins>
+    
+    <resources>
+    	<resource>
+            <directory>src/main/java</directory>
+            <includes>
+                <include>**/*.xml</include>
+            </includes>
+        </resource>
+    </resources>
+    
   </build>
 </project>
